<resources>
    <string name="app_name">BudgetPlanner</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reset_password">Reset password</string>
    <string name="valid_email">Enter a valid email address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back">Back</string>
    <string name="forgot_email_desc">An email with instructions to reset password has been sent to your email address. Please follow the instructions in the email to reset your password.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="new_password">New Password</string>
    <string name="new_email">New Email</string>
    <array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>
    <array name="years">
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
    </array>
</resources>